<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.owasp.webgoat</groupId>
    <artifactId>webgoat-parent</artifactId>
    <packaging>pom</packaging>
    <version>v8.1.0</version>

    <name>WebGoat Parent Pom</name>
    <description>Parent Pom for the WebGoat Project. A deliberately insecure Web Application</description>
    <inceptionYear>2006</inceptionYear>
    <url>https://github.com/WebGoat/WebGoat</url>

    <organization>
        <name>OWASP</name>
        <url>https://webgoat.github.io/</url>
    </organization>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.2.RELEASE</version>
    </parent>

    <licenses>
        <license>
            <name>GNU General Public License, version 2</name>
            <url>https://www.gnu.org/licenses/gpl-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mayhew64</id>
            <name>Bruce Mayhew</name>
            <email>webgoat@owasp.org</email>
            <organization>OWASP</organization>
            <organizationUrl>https://github.com/WebGoat/WebGoat</organizationUrl>
        </developer>
        <developer>
            <id>nbaars</id>
            <name>Nanne Baars</name>
            <email>nanne.baars@owasp.org</email>
            <organizationUrl>https://github.com/nbaars</organizationUrl>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
        <developer>
            <id>misfir3</id>
            <name>Jason White</name>
            <email>jason.white@owasp.org</email>
        </developer>
        <developer>
            <id>zubcevic</id>
            <name>René Zubcevic</name>
            <email>rene.zubcevic@owasp.org</email>
        </developer>
        <developer>
            <id>jwayman</id>
            <name>Jeff Wayman</name>
            <email/>
        </developer>
        <developer>
            <id>dcowden</id>
            <name>Dave Cowden</name>
            <email/>
        </developer>
        <developer>
            <id>lawson89</id>
            <name>Richard Lawson</name>
            <email/>
        </developer>
        <developer>
            <id>dougmorato</id>
            <name>Doug Morato</name>
            <email>doug.morato@owasp.org</email>
            <organization>OWASP</organization>
            <organizationUrl>https://github.com/dougmorato</organizationUrl>
            <timezone>America/New_York</timezone>
            <properties>
                <picUrl>https://avatars2.githubusercontent.com/u/9654?v=3&amp;s=150</picUrl>
            </properties>
        </developer>
    </developers>

    <mailingLists>
        <mailingList>
            <name>OWASP WebGoat Mailing List</name>
            <subscribe>https://lists.owasp.org/mailman/listinfo/owasp-webgoat</subscribe>
            <unsubscribe>Owasp-webgoat-request@lists.owasp.org</unsubscribe>
            <post>owasp-webgoat@lists.owasp.org</post>
            <archive>http://lists.owasp.org/pipermail/owasp-webgoat/</archive>
        </mailingList>
    </mailingLists>

    <scm>
        <url>https://github.com/WebGoat/WebGoat</url>
        <connection>scm:git:git@github.com:WebGoat/WebGoat.git</connection>
        <developerConnection>scm:git:git@github.com:WebGoat/WebGoat.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/WebGoat/WebGoat/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Travis CI</system>
        <url>https://travis-ci.org/WebGoat/WebGoat</url>
    </ciManagement>

    <properties>
        <!-- Use UTF-8 Encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <!-- This build number will be ubdated by Travis-CI -->
        <build.number>build</build.number>

        <!-- Shared properties with plugins and version numbers across submodules-->
        <activation.version>1.1.1</activation.version>
        <commons-collections.version>3.2.1</commons-collections.version>
        <commons-lang3.version>3.4</commons-lang3.version>
        <commons-io.version>2.6</commons-io.version>
        <guava.version>18.0</guava.version>
        <junit.version>4.12</junit.version>
        <lombok.version>1.18.4</lombok.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
    </properties>

    <modules>
        <module>webgoat-container</module>
        <module>webgoat-lessons</module>
        <module>webgoat-server</module>
        <module>webwolf</module>
        <module>webgoat-integration-tests</module>
		<module>docker</module><!-- copy required jars in preparation of docker all-in-one build -->
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
        </dependency>
        <!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.26.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>javac</artifactId>
            <version>9+181-r4173-1</version>
        </dependency>
    </dependencies>

<build>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>11</source>
				<target>11</target>
				<encoding>UTF-8</encoding>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-checkstyle-plugin</artifactId>
			<version>3.1.0</version>
			<configuration>
				<encoding>UTF-8</encoding>
				<consoleOutput>true</consoleOutput>
				<failsOnError>true</failsOnError>
				<configLocation>config/checkstyle/checkstyle.xml</configLocation>
				<suppressionsLocation>config/checkstyle/suppressions.xml</suppressionsLocation>
				<suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
			</configuration>
		</plugin>
        <plugin>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-maven-plugin</artifactId>
            <version>1.18.20.0</version>
            <executions>
                <execution>
                    <id>delombok</id>
                    <phase>generate-sources</phase>
                    <goals>
                        <goal>delombok</goal>
                    </goals>
                    <configuration>
                        <addOutputDirectory>false</addOutputDirectory>
                        <sourceDirectory>src/main/java</sourceDirectory>
                    </configuration>
                </execution>
                <execution>
                    <id>test-delombok</id>
                    <phase>generate-test-sources</phase>
                    <goals>
                        <goal>testDelombok</goal>
                    </goals>
                    <configuration>
                        <addOutputDirectory>false</addOutputDirectory>
                        <sourceDirectory>src/test/java</sourceDirectory>
                    </configuration>
                </execution>
            </executions>
        </plugin>
	</plugins>
</build>

<profiles>
    <profile>
        <id>checkerframework</id>
        <activation>
            <jdk>[1.8,)</jdk>
        </activation>
        <build>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
                        <compilerArguments>
                            <Xmaxerrs>10000</Xmaxerrs>
                            <Xmaxwarns>10000</Xmaxwarns>
                        </compilerArguments>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.checkerframework</groupId>
                                <artifactId>checker</artifactId>
                                <version>3.26.0</version>
                            </path>
                        </annotationProcessorPaths>
                        <annotationProcessors>
                            <!-- Add all the checkers you want to enable here -->
                            <annotationProcessor>org.checkerframework.checker.tainting.TaintingChecker</annotationProcessor>
                        </annotationProcessors>
                        <compilerArgs>
                            <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </build>
        <dependencies>
            <dependency>
                <groupId>org.checkerframework</groupId>
                <artifactId>checker</artifactId>
                <version>3.26.0</version>
            </dependency>
        </dependencies>
    </profile>

    <profile>
        <id>checkerframework-jdk8</id>
        <activation>
            <jdk>1.8</jdk>
        </activation>
        <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
        <properties>
            <javac.version>9+181-r4173-1</javac.version>
        </properties>
        <dependencies>
            <dependency>
                <groupId>com.google.errorprone</groupId>
                <artifactId>javac</artifactId>
                <version>9+181-r4173-1</version>
            </dependency>
        </dependencies>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <fork>true</fork>
                        <compilerArgs combine.children="append">
                            <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>

    <profile>
        <id>checkerframework-jdk9orlater</id>
        <activation>
            <jdk>[9,)</jdk>
        </activation>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <fork>true</fork>
                        <compilerArgs combine.children="append">
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </build>
        <properties>
            <!-- Needed for animal-sniffer-maven-plugin version 1.19 (version 1.20 is fixed). -->
            <animal.sniffer.skip>true</animal.sniffer.skip>
        </properties>
    </profile>
	<profile>
		<id>defaultProfile</id>
		<activation>
			<activeByDefault>true</activeByDefault>
		</activation>		
	</profile>
	<profile>
		<id>owasp</id>
		<activation>
			<activeByDefault>false</activeByDefault>
		</activation>
		    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                    <suppressionsLocation>config/checkstyle/suppressions.xml</suppressionsLocation>
                    <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                </configuration>
            </plugin>
            <plugin>
      				<groupId>org.apache.maven.plugins</groupId>
      				<artifactId>maven-pmd-plugin</artifactId>
      				<version>3.13.0</version>
      				<configuration>
      					<targetJdk>11</targetJdk>
      					<failurePriority>1</failurePriority><!-- 5 means fail even on the lowest
      						priority, 0 means never fail -->
      					<rulesets>
      						<ruleset>${maven.multiModuleProjectDirectory}/pmd-ruleset.xml</ruleset>
      					</rulesets>
      					<failOnViolation>true</failOnViolation>
      					<printFailingErrors>true</printFailingErrors>
      				</configuration>
      				<executions>
      					<execution>
      						<goals>
      							<goal>check</goal>
      						</goals>
      					</execution>
      				</executions>
      			</plugin>
      			<plugin>
      				<groupId>org.owasp</groupId>
      				<artifactId>dependency-check-maven</artifactId>
      				<version>5.3.2</version>
      				<configuration>
      					<failBuildOnCVSS>7</failBuildOnCVSS>
      					<skipProvidedScope>true</skipProvidedScope>
                          <skipRuntimeScope>true</skipRuntimeScope>
      					<suppressionFiles>
                              <suppressionFile>project-suppression.xml</suppressionFile>
                          </suppressionFiles>
      				</configuration>
      				<executions>
      					<execution>
      						<goals>
      							<goal>check</goal>
      						</goals>
      					</execution>
      				</executions>
      			</plugin>
        </plugins>
    </build>
	</profile>
</profiles>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>
